# init-provider

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: README.j2.md
examples/: basic.py  full_example.py  user_service.py  weather_service.py
src/init_provider/: __init__.py  decorators.py  decorators.pyi  exceptions.py  provider.py
src/init_provider/_internal/: _metaclass.py  _utils.py
src/tests/: conftest.py  test_del.py  test_init.py  test_metaclass.py  test_requires.py  test_setup_hook.py
