[project]
name = "init-provider"
version = "0.1.1"
description = ""
readme = "README.md"
authors = [
    { name = "vduseev", email = "vagiz@duseev.com" }
]
maintainers = [
    { name = "vduseev", email = "vagiz@duseev.com" }
]
requires-python = ">=3.10"
dependencies = []
keywords = ["provider", "initialization", "dependency", "lifecycle", "singleton"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
"Homepage" = "https://github.com/vduseev/init-provider"
"Documentation" = "https://github.com/vduseev/init-provider"
"Repository" = "https://github.com/vduseev/init-provider"
"Issues" = "https://github.com/vduseev/init-provider/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.0",
    "ruff>=0.8.5",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.48",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mike>=2.1.3",
    "jinjitsu>=0.1.1",
    "aiohttp>=3.12.15",
    "pydantic>=2.11.9",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
