[project]
name = "init-provider"
version = "0.1.4"
description = ""
readme = "README.md"
authors = [
    { name = "vduseev", email = "vagiz@duseev.com" }
]
maintainers = [
    { name = "vduseev", email = "vagiz@duseev.com" }
]
requires-python = ">=3.10"
dependencies = []
keywords = ["provider", "initialization", "dependency", "lifecycle", "singleton"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
"Homepage" = "https://github.com/vduseev/init-provider"
"Documentation" = "https://github.com/vduseev/init-provider"
"Repository" = "https://github.com/vduseev/init-provider"
"Issues" = "https://github.com/vduseev/init-provider/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "mypy>=2.1.0",
    "ruff>=0.15.0",
    "ty>=0.0.55",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-autorefs>=1.4.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mike>=2.2.0",
    "jinjitsu>=0.1.1",
    "aiohttp>=3.14.0",
    "pydantic>=2.13.4",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
